为下一次更新作准备(不能编译)